src/test/ui/consts/const-eval/const-eval-overflow-3b.stderr
error[E0369]: cannot add `u8` to `i8`
  --> $DIR/const-eval-overflow-3b.rs:16:20
   |
LL |     = [0; (i8::MAX + 1u8) as usize];
   |            ------- ^ --- u8
   |            |
   |            i8
   |
help: change the type of the numeric literal from `u8` to `i8`
   |
LL |     = [0; (i8::MAX + 1i8) as usize];
   |                       ~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0369`.
